[package]
name = "conductor-cli"
version = "0.1.0-dev"
authors = [
    "Patrick Barrett <patrick@auxon.com>",
    "Jon Lamb <jon@auxon.io>",
]
edition = "2021"
description = "CLI definition for the `conductor` crate."
homepage = "https://auxon.com"
repository = "https://github.com/auxoncorp/conductor"
license = "Apache-2.0"

default-run = "conductor"

[[bin]]
name = "conductor"
path = "src/main.rs"

[dependencies]
conductor = { version = "0.1.0-dev", path = "../conductor"}
conductor-config = { version = "0.1.0-dev", path = "../conductor-config"}

anyhow = "1.0"
clap = { version = "4", features = ["derive", "cargo", "wrap_help"] }
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["fmt"] }

[dev-dependencies]
assert_cmd = "2.0.10"
tracing-test = "0.2"
