[package]
name = "conductor-config"
version = "0.1.0-dev"
authors = ["Patrick Barrett <patrick@auxon.com>"]
edition = "2021"
description = "The config file format for the `conductor` crate."
homepage = "https://auxon.com"
repository = "https://github.com/auxoncorp/conductor"
license = "Apache-2.0"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.7"

[dev-dependencies]
indoc = "2"
