[package]
name = "conductor"
version = "0.1.0-dev"
authors = [
    "Patrick Barrett <patrick@auxon.com>",
    "Jon Lamb <jon@auxon.io>",
]
edition = "2021"
description = "Development and testing environment management for cyber-physical systems."
homepage = "https://auxon.com"
repository = "https://github.com/auxoncorp/conductor"
license = "Apache-2.0"
categories = ["aerospace", "command-line-utilities", "development-tools"]

[dependencies]
conductor-cli = { version = "0.1.0-dev", path = "../conductor-cli"}
conductor-config = { version = "0.1.0-dev", path = "../conductor-config"}

anyhow = "1.0"
thiserror = "1.0"
derive_more = "0.99"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["fmt"] }


[dev-dependencies]
assert_cmd = "2.0.10"
