[package]
name = "conductor"
version = "0.1.0-dev"
authors = [
    "Patrick Barrett <patrick@auxon.com>",
    "Jon Lamb <jon@auxon.io>",
]
edition = "2021"
description = "Development and testing environment management for cyber-physical systems."
homepage = "https://auxon.com"
repository = "https://github.com/auxoncorp/conductor"
license = "Apache-2.0"
categories = ["aerospace", "command-line-utilities", "development-tools"]

[dependencies]
conductor-config = { version = "0.1.0-dev", path = "../conductor-config"}

anyhow = "1.0"
bollard = "0.14"
futures-util = "*"
thiserror = "1.0"
derive_more = "0.99"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.37"
tar = "0.4.38"
petgraph = { version = "0.6", default-features = false }
itertools = "0.10"
colorous = "1.0"
ring = { version = "0.16.20", features = ["std"] }
data-encoding = "2.3.3"
regex = "1.8"
lazy_static = "1.4"

[dev-dependencies]
tracing-test = "0.2"
assert_cmd = "2.0.10"
indoc = "2"
pretty_assertions = "1"
tempfile = "3"
